<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScoreBoard</string>
    <string name="action_settings">Settings</string>
    <string name="empty_string"> </string>
    <string name="placeholder_number">0000</string>
    <string name="name_field_hint">Player Name</string>
    <string name="action_add">Add a Player</string>
    <string name="action_remove">Remove a Player</string>
    <string name="action_clear">Clear Scores</string>
    <string name="about_title">ScoreBoard 1.0</string>
    <string name="about_company">Richter Creative Solutions</string>
    <string name="about_year">2015</string>
    <string name="dialog_hints">Press and hold a name to change it \n\nPress and hold a score to change it \n\nSee the settings menu for other options \n\nThank you for downloading our app!</string>
    <string name="dialog_title">Getting Started</string>
    <string name="dialog_timer_affirmative">Start Timer</string>
    <string name="timer_title">timer</string>
    <string name="winner_dialog"> has won the game!  Tell all of your friends about it!</string>
    <string name="hints_settings">Show Hints</string>
    <string name="play_button_desc">Start timer</string>
    <string name="pause_button_desc">Pause timer</string>
    <string name="stop_button_desc">Stop and clear timer</string>
    <string name="up_button_desc">Increase score</string>
    <string name="down_button_desc">Decrease score</string>
    <string name="share_button_desc">Share Button</string>
    <string name="share_button_text">Share!</string>
    <string name="pref_increment">Counting Amount</string>
    <string name="pref_increment_desc">Adjust how much scores change by pressing up or down</string>
    <string name="prefs_start_score">Starting Score</string>
    <string name="prefs_start_score_desc">Adjust score new players start out with</string>
    <string name="prefs_lefty">Lefty Mode</string>
    <string name="prefs_lefty_desc">Changes layout to make arrows easier to press for left handed users</string>
    <string name="prefs_timer">Display Timer</string>
    <string name="prefs_timer_desc">Choose whether or not timer is displayed</string>
    <string name="prefs_sound">Play Sounds</string>
    <string name="prefs_sounds_desc">Choose whether or not sounds are played</string>


</resources>
