<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/hints_settings"
        android:showAsAction="never"
        android:title="@string/hints_settings"/>

    <item
        android:id="@+id/action_clear_scores"
        android:showAsAction="never"
        android:title="@string/action_clear" />
    
    <item 
        android:id="@+id/action_add"
		android:title="@string/action_add"
		android:icon="@drawable/ic_action_user_add"
		android:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/action_remove"
		android:title="@string/action_remove"
		android:icon="@drawable/ic_action_user_remove"
		android:showAsAction="ifRoom" />
    

</menu>
