<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/down_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_find_next_holo_light"
        android:contentDescription="@string/down_button_desc" />

    <ViewSwitcher
        android:id="@+id/score_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/down_button"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center_vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/score_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/placeholder_number"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/score_edittext"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </ViewSwitcher>

    <Button
        android:id="@+id/up_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_toRightOf="@id/score_switcher"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_find_previous_holo_light"
        android:contentDescription="@string/up_button_desc" />

    <ViewSwitcher
        android:id="@+id/name_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="4dp"
        android:layout_gravity="center_vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_edittext"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_field_hint"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </ViewSwitcher>

</RelativeLayout>
