<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="6dp"
    android:paddingRight="6dp" >

    <LinearLayout
        android:id="@+id/timer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="14dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/timer_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:background="@drawable/ic_action_play"
            android:contentDescription="@string/play_button_desc" />

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:background="@drawable/ic_action_pause"
            android:contentDescription="@string/pause_button_desc" />

        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:background="@drawable/ic_action_stop"
            android:contentDescription="@string/stop_button_desc" />

    </LinearLayout>

    <View
        android:id="@+id/horizontal_rule"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:layout_below="@id/timer_layout"
        android:background="#000000" />

    <ListView
    	android:id="@+id/list"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:layout_below="@id/horizontal_rule" >
    </ListView>
            
</RelativeLayout>
